--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Calculadora Solar - Prototipo EMCI</title>
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/index.css">
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 <script src="../lib/form.ts"></script>
