--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -1,10 +1,15 @@
+---
+import resetCSS from "../css/reset.css";
+import indexCSS from "../css/index.css";
+---
+
 <!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Calculadora Solar - Prototipo EMCI</title>
-	<link rel="stylesheet" href="../css/reset.css">
-	<link rel="stylesheet" href="../css/index.css">
+	<link rel="stylesheet" href={resetCSS}>
+	<link rel="stylesheet" href={indexCSS}>
 </head>
 <body>
 <script src="../lib/form.ts"></script>
