--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import resetCSS from "../css/reset.css";
-import indexCSS from "../css/index.css";
+import resetCSS from "../css/reset.css?url";
+import indexCSS from "../css/index.css?url";
 ---
 
 <!doctype html>
