--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -1,17 +1,9 @@
 ---
-import resetCSS from "../css/reset.css?url";
-import indexCSS from "../css/index.css?url";
+import Layout from '../layouts/Default.astro';
 ---
 
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Calculadora Solar - Prototipo EMCI</title>
-	<link rel="stylesheet" href={resetCSS}>
-	<link rel="stylesheet" href={indexCSS}>
-</head>
-<body>
+<Layout title="Calculadora Solar - Prototipo EMCI">
+
 <script src="../lib/form.ts"></script>
 <h1>Calculadora Solar - Modo técnico</h1>
 <solar-form>
@@ -83,5 +75,5 @@ import indexCSS from "../css/index.css?url";
         </div>
     </form>
 </solar-form>
-</body>
-</html>
+
+</Layout>
