--- a/www/src/css/index.css
+++ b/www/src/css/index.css
@@ -1,10 +1,15 @@
+:root {
+    --border: #ccc;
+}
+
 h1 {
     font-size: 1.5rem;
 }
 
-form {
+#form {
     display: flex;
-    gap: 16px;
+    flex-direction: column;
+    gap: .5em;
     justify-content: start;
     align-items: start;
     padding: 2rem;
@@ -29,6 +34,7 @@ label {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    width: 20rem;
 }
 
 label::after {
@@ -56,6 +62,7 @@ label select {
     background-color: transparent;
     padding: 0 .5rem;
     flex-grow: 1;
+    width: 0;
 }
 label textarea {
     height: 6rem;
@@ -68,25 +75,43 @@ label select {
     z-index: 2
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 .submit-wrapper {
     flex-basis: 100%;
 }
 
-button[type="submit"] {
-    background-color: aquamarine;
+.btn {
+    --c: #eff;
+    --border: color-mix(in lch, black 40%, var(--c));
+    --bevel: color-mix(in lch, black 10%, var(--c));
+    --background: color-mix(in lch, white 20%, var(--c));
 
-    border: 1px solid hsl(160deg 100% 40%);
+    background: linear-gradient(to bottom, var(--background), var(--c) 40%, var(--bevel) 40%, var(--c));
+
+    border: 1px solid var(--border);
     border-bottom-width: 2px;
-    border-radius: 4px;
-    box-shadow: hsl(160deg 100% 50%) 0 -2px 8px inset;
+    border-radius: 6px;
+    box-shadow: var(--bevel) 0 -2px 8px 2px inset;
 
     padding: .5rem 2rem;
 
     outline: none !important;
 }
-button[type="submit"]:focus {
+.btn:focus {
     border-color: royalblue;
     box-shadow: hsl(160deg 100% 80%) 0 -2px 8px inset;
+}
+
+button[type="submit"].btn {
+    --c: aquamarine;
 }
 
 .chart-group {
